fix: adjust line-height for better readability in hero component

--- a/src/widgets/hero/ui/hero.module.pcss
+++ b/src/widgets/hero/ui/hero.module.pcss
@@ -21,7 +21,7 @@
                         @media (max-width: 48em) {
                             & {
                                 font-size: 40px;
-                                line-height: 90%;
+                                line-height: 100%;
                             }
                         }
 
